# prahari-apk-analyzer

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: apk_analyzer.py  app.py  app_database.py  ml_classes.py  utils.py
backend/src/models/: certificate_model.pkl  certificate_vectorizer.pkl  package_dictvec.pkl  package_model.pkl  package_scaler.pkl  package_vectorizer.pkl  permission_encoder.pkl  permission_model.pkl
backend/src/templates/: index.html
database/: app.db
frontend/: index.html  package-lock.json  package.json  script.js  style.css
