[project]
name = "apk-detector-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "androguard==4.1.3",
    "cryptography==45.0.6",
    "eventlet>=0.40.2",
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-socketio>=5.5.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "requests==2.31.0",
    "scikit-learn==1.5.0",
    "vectorizer>=0.3.0",
    "werkzeug==2.3.7",
    "xgboost>=3.0.4",
]
